# dumbwaiter

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  dumbwaiter.cabal  example.yaml  index.html  stack.yaml
.travis/: attach-binary.sh  install-ghr.sh
app/: Main.hs
src/: Dumbwaiter.hs
src/Dumbwaiter/: Matchers.hs  Responders.hs  Strategies.hs  Types.hs
tools/: attach-binary.sh  install-ghr.sh
