name:                dumbwaiter
version:             0.2.3.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/dumbwaiter#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dumbwaiter
                     , Dumbwaiter.Matchers
                     , Dumbwaiter.Responders
                     , Dumbwaiter.Types
                     , Dumbwaiter.Strategies
  build-depends:       base >= 4.7 && < 5
                     , yaml == 0.8.*
                     , firefly == 0.2.*
                     , text == 1.2.*
                     , aeson == 1.2.*
                     , bytestring == 0.10.*
                     , http-types == 0.9.*
                     , case-insensitive == 1.2.*
                     , containers == 0.5.*
                     , lens-aeson == 1.0.*
                     , lens  == 4.15.*
                     , wai == 3.2.*
                     , mtl == 2.2.*
  default-language:    Haskell2010
  ghc-options:         -Wall

executable dumbwaiter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , dumbwaiter
                     , optparse-applicative == 0.14.*
                     , aeson == 1.2.*
                     , mtl == 2.2.*
  default-language:    Haskell2010

test-suite dumbwaiter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dumbwaiter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/dumbwaiter
